# autonix

./: .envrc  .gitignore  Cargo.toml  flake.nix  per-system.nix
src/: index.rs  init.rs  main.rs  setup.rs
