[package]
name = "autonix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bytes = "1.4.0"
clap = { version = "4.2.7", features = [
    "derive",
] }
color-eyre = "0.6.2"
fuse3 = { git = "https://github.com/Sherlock-Holo/fuse3", features = [
    "tokio-runtime",
    "unprivileged",
], branch = "master" }
futures-util = "0.3.28"
libc = "0.2.144"
nix = "0.26.2"
tokio = { version = "1.28.1", features = [
    "full",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
] }
